--- a/src/Layout/Header.css
+++ b/src/Layout/Header.css
@@ -1,11 +1,133 @@
 
 .Header {
-  position: absolute;
-  width: 100%;
-  height: 153px;
-  left: -1px;
-  top: 67px;
+  position: fixed;   /* 화면에 고정 */
+  top:45px;     /* 화면의 맨 위에 위치 */
+  left: 0;           /* 화면의 맨 왼쪽에 위치 */
+  width: 100%;       /* 전체 너비를 차지 */
+  height: 155px;     /* 원하는 높이 */
+  background: #FFF5DB; 
   
-  background: #FFF5DB;
+  z-index: 1000;
+
+
 }
+
+.logo{
+cursor: pointer;
+position: absolute;
+width: 200px;
+height: 155px;
+left: 0px;
+top: 0px;
+background-image: url(D:\study\src\Layout\Logo.png);
+background-size: cover;
+background-position: center;
+
+}
+.search{
+ text-align: center;
+
+}
+
+.navi_ul {
+  display: flex; /* 가로로 정렬 */
+  list-style: none; /* 기본 리스트 스타일 제거 */
+  padding: 0;
+  margin: 0;
+  justify-content: center; /* 가운데 정렬 */
+}
+
+.navi_item {
+  text-align: right;
+  display:inline-block; /* 가로로 정렬 */
+  margin-right: 20px; /* 항목 간 간격 */
+  
+}
+.search_img{
+  top: 15px;
+width: 40px;
+}
+.nav_img{
+  display:inline;
+  width: 40px;
+  top: 15px;
+}
+.search_bar{
+margin-top:20px;
+box-sizing: border-box;
+width: 630px;
+height: 40px;
+background: #FFF5DB;
+border: 1px solid #000000;
+border-radius: 15px;
+
+}
+
+
+.login{
+  position: absolute;
+  font-family: 'Hahmlet';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 29px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  width: 132.8px;
+  height: 36px;
+  left: calc(50% - 132.8px/2 + 442.5px);
+  top: 100px;
+  background: #D9D9D9;
+  border-radius: 15px;
+}
+
+.login_a{
+ width: 170px;
+ text-decoration: none;
+}
+.createAccount{
+  position: absolute;
+  font-family: 'Hahmlet';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 29px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  width: 132.8px;
+  height: 36px;
+  left: calc(50% - 132.8px/2 + 610.5px);
+  top: 100px;
+  background: #D9D9D9;
+  border-radius: 15px;
+
+
+}
+.createAccount_a{
+  width: 170px;
+  text-decoration: none;
+}
+
+.event{
+position: fixed;
+width: 100%;
+height: 45px;
+left: 0px;
+top: 0px;
+text-align: center;
+align-items: center;
+background: #FFC1C1;
+font-size: 20px;
+
+}
+.event_lab{
+  text-decoration-line: none;
+  color: #000;
+}
+
+
 
