--- a/src/Layout/Header.css
+++ b/src/Layout/Header.css
@@ -39,18 +39,22 @@ background-position: center;
 
 .navi_item {
   text-align: right;
-  display:inline-block; /* 가로로 정렬 */
-  margin-right: 20px; /* 항목 간 간격 */
+  display:inline-block; 
+  margin-right: 20px; 
   
 }
 .search_img{
+  position: relative;
   top: 15px;
 width: 40px;
 }
 .nav_img{
+  position: relative;
   display:inline;
   width: 40px;
-  top: 15px;
+  margin : 80px;
+  top:-120px;
+  left:650px;
 }
 .search_bar{
 margin-top:20px;
@@ -63,9 +67,17 @@ border-radius: 15px;
 
 }
 
-
-.login{
-  position: absolute;
+.login_nav_ul{
+  display: flex; /* 가로로 정렬 */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  justify-content: right; /* 가운데 정렬 */
+}
+.login_nav_ul li{
+  margin:20px;
+}
+  .login_li{
   font-family: 'Hahmlet';
   font-style: normal;
   font-weight: 400;
@@ -77,18 +89,19 @@ border-radius: 15px;
   position: absolute;
   width: 132.8px;
   height: 36px;
-  left: calc(50% - 132.8px/2 + 442.5px);
-  top: 100px;
+
+  left :1320px;
+  top: 90px;
   background: #D9D9D9;
-  border-radius: 15px;
-}
+  border-radius: 15px; 
+}  
 
 .login_a{
  width: 170px;
  text-decoration: none;
 }
-.createAccount{
-  position: absolute;
+ .Signup_li{
+  
   font-family: 'Hahmlet';
   font-style: normal;
   font-weight: 400;
@@ -100,14 +113,13 @@ border-radius: 15px;
   position: absolute;
   width: 132.8px;
   height: 36px;
-  left: calc(50% - 132.8px/2 + 610.5px);
-  top: 100px;
+  right: 50px;
+  top: 90px;
   background: #D9D9D9;
-  border-radius: 15px;
+  border-radius: 15px; 
 
-
-}
-.createAccount_a{
+} 
+.Signup_a{
   width: 170px;
   text-decoration: none;
 }
