--- a/src/Layout/Footer.css
+++ b/src/Layout/Footer.css
@@ -21,34 +21,30 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+   
     justify-content: center;
  }
 
-  div>hr{
+ .footer-content hr{
     width : 100%;
   }
-  .footer-content h3 {
-    margin-bottom: 10px;
-  }
   
-  ul {
+  .footer-ul {
     display: flex;
     flex-direction: column;
      padding :0;
-
+     list-style: none;
   }
   
-  li {
-    margin: 10px 0;
-  }
+.footer-ul li{
+  margin: 10px 0;
+}
   
   .footer-link {
     color : black;
     font-size: 14px;
     text-decoration: none;
     transition: color 0.3s ease;
-    
   }
   .footer-email{
     display: block;
