--- a/src/routes/Login.css
+++ b/src/routes/Login.css
@@ -1,6 +1,103 @@
-.login-button {
-    padding-top: 200px;  /* 헤더 높이만큼 여백 추가 */
-    padding-bottom: 180px;  /* 푸터 높이만큼 여백 추가 */
-    overflow-y: auto;
-    height: 1000px;
-  }
+.login_container {
+  padding-top: 200px;
+  /* 헤더 높이만큼 여백 추가 */
+  padding-bottom: 200px;
+  /* 푸터 높이만큼 여백 추가 */
+  overflow-y: auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.login_container h2 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 58px;
+  color: #000000;
+}
+
+.login_box {
+  /* 로그인 프레임 */
+  width: 400px;
+  background: #D9D9D9;
+}
+
+.logo_login {
+  width: 225px;
+  height: 225px;
+  margin: auto;
+  background-image: url(D:\study\src\Layout\Logo.png);
+}
+
+.input_group input {
+  width: 80%;
+  height: 50px;
+  margin: 10px 0;
+  padding: 0 15px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+
+}
+
+.login_button{
+  width: 80%;
+  height: 50px;
+  margin: 10px 0;
+  padding: 0 15px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.lost_id_pw {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.lost_id_pw div {
+  display: flex;
+}
+
+.lost_id_pw div a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 20px;
+  margin: 10px;
+}
+
+.lost_id_pw div hr {
+  border-left: thin solid;
+  height: 20px;
+}
+
+.sns_login {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+
+}
+
+.sns_login label {
+  display: block;
+  /* label을 블록 요소로 설정 */
+  margin-right: 40px;
+  /* label과 img 사이에 간격 추가 (20px로 설정) */
+  font-size: 16px;
+  /* 글자 크기 설정 */
+  color: #333;
+}
+
+.kakao_img {
+
+  width: 50px;
+  height: auto;
+  cursor: pointer;
+}
