--- a/src/routes/Login.css
+++ b/src/routes/Login.css
@@ -57,23 +57,20 @@
 
 .lost_id_pw {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-
+  
 }
 
-.lost_id_pw div {
-  display: flex;
-}
-
-.lost_id_pw div a {
+.lost_id_pw a {
+  flex: 1;
   text-decoration: none;
   color: #000000;
-  font-size: 20px;
-  margin: 10px;
+  font-size: 15px;
+  margin: 20px;
 }
 
-.lost_id_pw div hr {
+.lost_id_pw hr {
   border-left: thin solid;
   height: 20px;
 }
