--- a/src/routes/Signup.css
+++ b/src/routes/Signup.css
@@ -1,11 +1,64 @@
 .Signup {
-      
-  
-    padding-top: 200px;  /* 헤더 높이만큼 여백 추가 */
-    padding-bottom: 180px;  /* 푸터 높이만큼 여백 추가 */
-    overflow-y: auto;
-    height: 1000px;
-    
-  }
- 
- 
+  display: flex;
+  height: 1000px;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 0;
+  text-align: center;
+  flex-direction: column;
+  overflow-y: auto;
+  min-height: 100%
+}
+
+.Signup-text {
+  padding-top: 1-8 00px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.Signup-form {
+  background-color: #E2E2E2;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group label {
+  margin-bottom: 5px;
+  font-size: 0.9rem;
+}
+
+.form-group input {
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.Signup-button {
+  padding: 12px;
+  background-color: #FFC0CB;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.Signup-button:hover {
+  background-color: #000080;
+}
