--- a/src/Layout/Header.css
+++ b/src/Layout/Header.css
@@ -19,7 +19,7 @@ width: 200px;
 height: 155px;
 left: 0px;
 top: 0px;
-/* background-image: url(D:\study\src\Layout\Logo.png); */
+ background-image: url(D:\study\src\Layout\Logo.png); 
 background-size: cover;
 background-position: center;
 
