--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,55 +1,61 @@
 .home {
-    padding-top: 200px;  /* 헤더 높이만큼 여백 추가 */
-    padding-bottom: 180px;  /* 푸터 높이만큼 여백 추가 */
-    height: auto;
-    text-align: center;
-  }
- 
-  .products {
-    display: flex;
-    flex-wrap: wrap; /* 화면 크기에 따라 여러 줄로 자동 정렬 */
-    justify-content: center; /* 항목을 가운데 정렬 */
-    list-style-type: none;
-    padding: 0;
-  }
+  padding-top: 200px;  /* 헤더 높이만큼 여백 추가 */
+  padding-bottom: 180px;  /* 푸터 높이만큼 여백 추가 */
+  height: auto;
+  text-align: center;
+}
 
-  .products li {
-    width: 250px; /* 각 상품 항목의 너비 설정 */
-    margin: 15px; /* 상품 간의 간격 설정 */
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    background-color: #fff;
-  }
+h1 {
+  font-size: 36px;
+  margin-bottom: 30px;
+  color: #333;
+}
 
-  .products img {
-    width: 100%; /* 이미지가 항목 너비에 맞게 조정 */
-    height: auto;
-    border-radius: 10px;
-  }
-  
-  .products h2 {
-    font-size: 18px;
-    margin: 10px 0;
-  }
-  
-  .products p {
-    font-size: 14px;
-    color: #555;
-  }
-  
-  .products a {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 8px 15px;
-    background-color: #4caf50;
-    color: white;
-    border-radius: 5px;
-    text-decoration: none;
-  }
-  
-  .products a:hover {
-    background-color: #45a049;
-  }
+.products {
+  display: flex;
+  flex-wrap: wrap; /* 화면 크기에 따라 여러 줄로 자동 정렬 */
+  justify-content: center; /* 항목을 가운데 정렬 */
+  list-style-type: none;
+  padding: 0;
+}
+
+.products li {
+  width: 250px; /* 각 상품 항목의 너비 설정 */
+  margin: 15px; /* 상품 간의 간격 설정 */
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  background-color: #fff;
+}
+
+.products img {
+  width: 100%; /* 이미지가 항목 너비에 맞게 조정 */
+  height: 240px;
+  border-radius: 10px;
+}
+
+.products h2 {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+.products p {
+  font-size: 14px;
+  color: #555;
+}
+
+.products a {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 8px 15px;
+  background-color: #4caf50;
+  color: white;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.products a:hover {
+  background-color: #45a049;
+}
