--- a/src/routes/Details.css
+++ b/src/routes/Details.css
@@ -1,7 +1,7 @@
 .product {
   padding-top: 250px;
   padding-bottom: 180px;
-  min-height: 100vh;
+  height: 1000px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
