--- a/src/routes/Login.css
+++ b/src/routes/Login.css
@@ -5,7 +5,7 @@
   /* 푸터 높이만큼 여백 추가 */
   overflow-y: auto;
   text-align: center;
-  display: flex;
+  display:flex;
   justify-content: center;
 }
 
@@ -21,14 +21,16 @@
   /* 로그인 프레임 */
   width: 400px;
   background: #D9D9D9;
+  text-align: center;
+  justify-content: center;
 }
 
 .logo_login {
   width: 225px;
   height: 225px;
-  margin: auto;
-   background-image: url(D:\study\src\Layout\Logo.png); 
-}
+  margin-top: 20px;
+   
+} 
 
 .input_group input {
   width: 80%;
