--- a/src/Layout/Header.css
+++ b/src/Layout/Header.css
@@ -22,60 +22,91 @@ top: 0px;
 
 
 }
-.search{
- text-align: center;
+.search {
+  text-align: center;
 
 }
 
 .navi_ul {
-  display: flex; /* 가로로 정렬 */
-  list-style: none; /* 기본 리스트 스타일 제거 */
+  display: flex;
+  list-style: none;
   padding: 0;
   margin: 0;
-  justify-content: center; /* 가운데 정렬 */
+  justify-content: center;
 }
 
 .navi_item {
   text-align: right;
-  display:inline-block; 
-  margin-right: 20px; 
-  
+  display: inline-block;
+  margin-right: 20px;
+
 }
-.search_img{
+
+.search_img {
   position: relative;
   top: 15px;
-width: 40px;
-}
-.nav_img{
-  position: relative;
-  display:inline;
   width: 40px;
-  margin : 80px;
-  top:-120px;
-  left:650px;
 }
-.search_bar{
-margin-top:20px;
-box-sizing: border-box;
-width: 630px;
-height: 40px;
-background: #FFF5DB;
-border: 1px solid #000000;
-border-radius: 15px;
+
+.nav_img {
+  position: relative;
+  display: inline;
+  width: 40px;
+  margin: 80px;
+  top: -120px;
+  left: 650px;
+}
+
+.search_bar {
+  margin-top: 20px;
+  box-sizing: border-box;
+  width: 630px;
+  height: 40px;
+  background: #FFF5DB;
+  border: 1px solid #000000;
+  border-radius: 15px;
 
 }
 
-.login_nav_ul{
-  display: flex; /* 가로로 정렬 */
+.category-menu {
+  position: absolute;
+  top: 50%;
+  left: 220px;
+  transform: translateY(-50%);
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.category-item {
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  transition: color 0.3s ease;
+}
+
+.category-item:hover {
+  color: #ff5722;
+  text-decoration: underline;
+}
+
+.login_nav_ul {
+  display: flex;
   list-style: none;
   padding: 0;
   margin: 0;
-  justify-content: right; /* 가운데 정렬 */
+  justify-content: right;
+
 }
-.login_nav_ul li{
-  margin:20px;
+
+.login_nav_ul li {
+  margin: 20px;
 }
-  .login_li{
+
+.login_li {
   font-family: 'Hahmlet';
   font-style: normal;
   font-weight: 400;
@@ -88,30 +119,32 @@ border-radius: 15px;
   width: 132.8px;
   height: 36px;
 
-  left :1320px;
+  left: 1320px;
   top: 90px;
   background: #D9D9D9;
-  border-radius: 15px; 
-}  
-
-.login_a, .Signup_a {
-  color: #000000; 
-  width:170px; /* 파란색으로 변경 (원하는 색상으로 수정) */
-  text-decoration: none;  /* 기본 밑줄 제거 */
+  border-radius: 15px;
 }
 
-/* 로그인, 회원가입, 로그아웃 클릭 시 색상 변화 */
-.login_a:hover, .Signup_a:hover {
-  color: #1d72b8;  /* 마우스를 올렸을 때 색상 (원하는 색상으로 수정) */
+.login_a,
+.Signup_a {
+  color: #000000;
+  width: 170px;
+  text-decoration: none;
 }
 
-/* 클릭했을 때 색상 변화 */
-.login_a:active, .Signup_a:active {
-  color: #1a6bbd;  /* 클릭 시 색상 */
+.login_a:hover,
+.Signup_a:hover {
+  color: #1d72b8;
 }
- .Signup_li{
-  
- 
+
+.login_a:active,
+.Signup_a:active {
+  color: #1a6bbd;
+}
+
+.Signup_li {
+
+
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -125,26 +158,24 @@ border-radius: 15px;
   right: 50px;
   top: 90px;
   background: #D9D9D9;
-  border-radius: 15px; 
-
-} 
-
-.event{
-position: fixed;
-width: 100%;
-height: 45px;
-left: 0px;
-top: 0px;
-text-align: center;
-align-items: center;
-background: #FFC1C1;
-font-size: 20px;
+  border-radius: 15px;
 
 }
-.event_lab{
+
+.event {
+  position: fixed;
+  width: 100%;
+  height: 45px;
+  left: 0px;
+  top: 0px;
+  text-align: center;
+  align-items: center;
+  background: #FFC1C1;
+  font-size: 20px;
+
+}
+
+.event_lab {
   text-decoration-line: none;
   color: #000;
 }
-
-
-
