--- a/src/routes/Order.css
+++ b/src/routes/Order.css
@@ -17,6 +17,47 @@
   gap:20px;
  
 }
+.count-price-container {
+    display: flex;
+    align-items: center;
+  }
+
+.count-button {
+  padding: 8px 12px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin: 0 5px;
+}
+
+.count-button:hover {
+  background-color: #45a049;
+}
+
+.count-number {
+  font-size: 18px;
+  margin: 0 10px;
+}
+
+.count-button.decrease {
+  background-color: #f44336;
+}
+
+.count-button.decrease:hover {
+  background-color: #e53935;
+}
+
+.count-button.increase {
+  background-color: #4CAF50;
+}
+
+.count-button.increase:hover {
+  background-color: #388e3c;
+}
 
 .cnt-left {
   flex: 1.2; 
