--- a/src/routes/Location.css
+++ b/src/routes/Location.css
@@ -1,6 +1,6 @@
 .location {
     padding-top: 200px;  /* 헤더 높이만큼 여백 추가 */
-    padding-bottom: 180px;  /* 푸터 높이만큼 여백 추가 */
+      /* 푸터 높이만큼 여백 추가 */
     overflow-y: auto;
     height: 1000px;
   }
