--- a/src/Layout/Header.css
+++ b/src/Layout/Header.css
@@ -99,7 +99,8 @@ top: 0px;
   padding: 0;
   margin: 0;
   justify-content: right;
-
+  right: 50px;
+  gap: 10px;
 }
 
 .login_nav_ul li {
@@ -118,8 +119,7 @@ top: 0px;
   position: absolute;
   width: 132.8px;
   height: 36px;
-
-  left: 1320px;
+  right: 250px;
   top: 90px;
   background: #D9D9D9;
   border-radius: 15px;
@@ -143,8 +143,6 @@ top: 0px;
 }
 
 .Signup_li {
-
-
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
