--- a/src/routes/Mypage.css
+++ b/src/routes/Mypage.css
@@ -1,6 +1,6 @@
 .mypage-container {
   padding-top: 200px;  /* 헤더 높이만큼 여백 추가 */
-  padding-bottom: 180px;  /* 푸터 높이만큼 여백 추가 */
+  /* 푸터 높이만큼 여백 추가 */
   
   width: 80%;
    /* 화면 크기에 맞춰 너비 조정 */
