--- a/src/routes/Order.css
+++ b/src/routes/Order.css
@@ -400,3 +400,16 @@ select:focus {
 .pay-button:hover:enabled {
   background-color: #0004ff;
 }
+
+.real-pay-button {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: #000000;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
