--- a/src/routes/QAPage.css
+++ b/src/routes/QAPage.css
@@ -57,8 +57,28 @@
     font-weight: bold;
 }
 
-.qa-table tr:nth-child(even) {
-    background-color: #f9f9f9;
+.qa-table th:nth-child(1), 
+.qa-table td:nth-child(1) { 
+    width: 10%; 
+    text-align: center; 
+}
+
+.qa-table th:nth-child(2), 
+.qa-table td:nth-child(2) { 
+    width: 50%; 
+    text-align: left; 
+}
+
+.qa-table th:nth-child(3), 
+.qa-table td:nth-child(3) { 
+    width: 20%; 
+    text-align: center; 
+}
+
+.qa-table th:nth-child(4), 
+.qa-table td:nth-child(4) { 
+    width: 20%; 
+    text-align: center; 
 }
 
 .qa-table tr:hover {
