--- a/src/Layout/Header.css
+++ b/src/Layout/Header.css
@@ -1,179 +1,105 @@
-
 .Header {
-  position: fixed;   /* 화면에 고정 */
-  top:45px;     /* 화면의 맨 위에 위치 */
-  left: 0;           /* 화면의 맨 왼쪽에 위치 */
-  width: 100%;       /* 전체 너비를 차지 */
-  height: 155px;     /* 원하는 높이 */
-  background: #FFF5DB; 
-  
+  width: 80%;
+  background-color: white;
+
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 1000;
-
-
+  padding: 10px 0;
 }
 
-.logo{
-cursor: pointer;
-position: absolute;
-width: 200px;
-height: 155px;
-left: 0px;
-top: 0px;
-
-
-}
-.search {
-  text-align: center;
-
-}
-
-.navi_ul {
+/* 헤더 상단 (로고, 검색창, 로그인 네비) */
+.header-top {
   display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.logo {
+  height: 50px;
+  cursor: pointer;
+}
+
+.search {
+  flex-grow: 1;
+  display: flex;
   justify-content: center;
 }
 
-.navi_item {
-  text-align: right;
-  display: inline-block;
-  margin-right: 20px;
-
+.search-form {
+  display: flex;
+  width: 50%;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  overflow: hidden;
 }
 
-.search_img {
-  position: relative;
-  top: 15px;
-  width: 40px;
+.search-bar {
+  flex-grow: 1;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  outline: none;
 }
 
-.nav_img {
-  position: relative;
-  display: inline;
-  width: 40px;
-  margin: 80px;
-  top: -120px;
-  left: 650px;
+.search-btn {
+  background: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
 }
 
-.search_bar {
-  margin-top: 20px;
-  box-sizing: border-box;
-  width: 630px;
-  height: 40px;
-  background: #FFF5DB;
-  border: 1px solid #000000;
-  border-radius: 15px;
+.search-img {
+  width: 20px;
+  height: 20px;
+}
 
+.nav-links {
+  display: flex;
+  gap: 15px;
+  font-size: 14px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+/* 헤더 하단 (카테고리 메뉴, 아이콘 메뉴) */
+.header-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  border-top: 1px solid #ddd;
 }
 
 .category-menu {
-  position: absolute;
-  top: 50%;
-  left: 220px;
-  transform: translateY(-50%);
   display: flex;
-  gap: 20px;
   list-style: none;
-  margin: 0;
   padding: 0;
+  margin: 0;
+  gap: 20px;
 }
 
 .category-item {
   cursor: pointer;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: bold;
-  color: #333;
-  transition: color 0.3s ease;
+  color: black;
 }
 
-.category-item:hover {
-  color: #ff5722;
-  text-decoration: underline;
-}
-
-.login_nav_ul {
+.icon-menu {
   display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  justify-content: right;
-  right: 50px;
-  gap: 10px;
+  gap: 15px;
 }
 
-.login_nav_ul li {
-  margin: 20px;
-}
-
-.login_li {
-  font-family: 'Hahmlet';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 29px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  position: absolute;
-  width: 132.8px;
-  height: 36px;
-  right: 250px;
-  top: 90px;
-  background: #D9D9D9;
-  border-radius: 15px;
-}
-
-.login_a,
-.Signup_a {
-  color: #000000;
-  width: 170px;
-  text-decoration: none;
-}
-
-.login_a:hover,
-.Signup_a:hover {
-  color: #1d72b8;
-}
-
-.login_a:active,
-.Signup_a:active {
-  color: #1a6bbd;
-}
-
-.Signup_li {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 29px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  position: absolute;
-  width: 132.8px;
-  height: 36px;
-  right: 50px;
-  top: 90px;
-  background: #D9D9D9;
-  border-radius: 15px;
-
-}
-
-.event {
-  position: fixed;
-  width: 100%;
-  height: 45px;
-  left: 0px;
-  top: 0px;
-  text-align: center;
-  align-items: center;
-  background: #FFC1C1;
-  font-size: 20px;
-
-}
-
-.event_lab {
-  text-decoration-line: none;
-  color: #000;
+.nav-icon {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
 }
