--- a/src/routes/Category.css
+++ b/src/routes/Category.css
@@ -9,7 +9,7 @@
     overflow-y: auto;
 }
 
-h2 {
+.Category h2 {
     font-size: 24px;
     margin-bottom: 20px;
     color: #333;
@@ -69,3 +69,11 @@ h2 {
     color: #888;
     margin-top: 30px;
 }
+
+
+  
+  .page-btn:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+  
